@@ -1,0 +1,72 @@
+class Designation{
+    constructor(value,tick,sub){
+        if(typeof value === 'number'){
+            this.value = value + DEPRESSION_LETTER; // DEPRESSION_LETTER constant with "H" is temporary until DesignationSystem is finished
+            this.num = value;
+        }else{
+            this.value = value;
+            this.num = undefined;
+        }
+        this.effectiveTick = tick;
+        this.subBasin = sub || 0;
+        if(this.value instanceof LoadData) this.load(this.value);
+    }
+
+    isName(){
+        if(this.num===undefined) return true;
+    }
+
+    truncate(){
+        if(this.isName()){
+            return ({
+                'Alpha':'\u03B1',
+                'Beta':'\u03B2',
+                'Gamma':'\u03B3',
+                'Delta':'\u03B4',
+                'Epsilon':'\u03B5',
+                'Zeta':'\u03B6',
+                'Eta':'\u03B7',
+                'Theta':'\u03B8',
+                'Iota':'\u03B9',
+                'Kappa':'\u03BA',
+                'Lambda':'\u03BB',
+                'Mu':'\u03BC',
+                'Nu':'\u03BD',
+                'Xi':'\u03BE',
+                'Omicron':'\u03BF',
+                'Pi':'\u03C0',
+                'Rho':'\u03C1',
+                'Sigma':'\u03C3',
+                'Tau':'\u03C4',
+                'Upsilon':'\u03C5',
+                'Phi':'\u03C6',
+                'Chi':'\u03C7',
+                'Psi':'\u03C8',
+                'Omega':'\u03C9'
+            })[this.value] || this.value.slice(0,1);
+        }else return this.num + '';
+    }
+
+    save(){
+        let o = {};
+        for(let p of [
+            'value',
+            'num',
+            'effectiveTick',
+            'subBasin'
+        ]) o[p] = this[p];
+        return o;
+    }
+
+    load(data){
+        if(data instanceof LoadData){
+            let o = data.value;
+            for(let p of [
+                'value',
+                'num',
+                'effectiveTick',
+                'subBasin'
+            ]) this[p] = o[p];
+        }
+    }
+}
